src/app/full/full.component.scss
@import '../../assets/styles/mat-colors.scss';

.background {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-color: map-get($mat-colors, mat-gray-800);
}

.fixed-header {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 2;
}

.global-margin {
    margin-bottom: 75px;
}

